ws-slo/apps/mautrix/signal/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mautrix-signal
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: mautrix-signal
      app.kubernetes.io/name: mautrix-signal
  serviceName: mautrix-signal
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mautrix-signal
        app.kubernetes.io/name: mautrix-signal
    spec:
      containers:
        - name: mautrix
          image: mautrix
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /_matrix/mau/live
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 15
          ports:
            - name: http
              containerPort: 29328
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /_matrix/mau/ready
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 180
            httpGet:
              path: /_matrix/mau/ready
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /data
            - name: startup-config
              mountPath: /data/config.yaml
              readOnly: true
              subPath: config.yaml
            - name: startup-config
              mountPath: /data/doublepuppet.yaml
              readOnly: true
              subPath: doublepuppet.yaml
            - name: startup-config
              mountPath: /data/registration.yaml
              readOnly: true
              subPath: registration.yaml
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - CHOWN
                - SETUID
                - SETGID
      securityContext:
        fsGroup: 1337
      volumes:
        - name: startup-config
          secret:
            secretName: mautrix-signal
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
