ws-slo/apps/mautrix/signal/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: signal
spec:
  rules:
    - backendRefs:
        - name: mautrix-signal
          port: 29328
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: signal-redirect
spec:
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
